frontend/src/ui/components/page-title-search/page-title-search.css
.page-title-search-wrapper {
  background-color: #F2F2F2;
  height: 142px;
  margin-top: -100px;
  position: relative;
  z-index: 0;
  width: 100%;
  display: flex;
}

.page-title-search-box {
  width: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
}

.page-title-search {
  display: flex;
  width: 80%;
  padding-left: 20px;
  max-width: 1400px;
  min-width: 800px;
  font-size: 28px;
  font-weight: 600;
  color: #26415C;
  padding-bottom: 16px;
  position: absolute;
  bottom: 0px;
}

.page-title-search-toggle {
  display: flex;
  justify-content: flex-end;
  width: 80%;
  max-width: 1400px;
  min-width: 800px;
  padding-bottom: 16px;
  position: absolute;
  bottom: 0px;
}

.tab-switch {
  position: relative;
  display: inline-block;
  width: 39px;
  height: 16px;
}

/* Hide default HTML checkbox */
.tab-switch input {
  opacity: 0;
  width: 0;
  height: 0;
}

/* The slider */
.slider {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: #ccc;
  -webkit-transition: .4s;
  transition: .4s;
}

.slider:before {
  position: absolute;
  content: "";
  height: 12px;
  width: 12px;
  left: 3px;
  bottom: 2px;
  background-color: white;
  -webkit-transition: .4s;
  transition: .4s;
}

input:checked + .slider {
  background-color: #005CAB;
}

input:focus + .slider {
  box-shadow: 0 0 1px #005CAB;
}

input:checked + .slider:before {
  transform: translateX(20px);
}

/* Rounded sliders */
.slider.round {
  border-radius: 34px;
}

.slider.round:before {
  border-radius: 50%;
}


.search-options {
  position: relative;
  top: 57px;
  left: 150px;
  width: 500px;
  text-align: right;
  z-index: 5;
}

.tab-switch p {
  width: 160px;
  position: relative;
  left: -170px;
  top: -15px;
  font-size: 9.5pt;
  font-family: 'Poppins';
  color: #26415C;
}

.search-sort select {
  padding: 2px !important;
  border-radius: 5px;
  font-family: Poppins;
  font-size: 10pt;
  margin-left: 7px;
  display: inline-block;
  border-color:#CCCCCC;
  color: #26415C;
  font-size: 9pt !important;

}

.search-sort p {
  width: 160px;
  display: inline-block;
  font-size: 9.5pt;
  font-family: 'Poppins';
  color: #26415C;
}

.search-sort {
  position: relative;
  height: 25px;
  top:-55px;
  text-align: right;
}

